# oidc-forward-auth-middleware

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  platform.sh  verify.http
.github/workflows/: release-dev.yml  release-prod-helm.yml  release-prod.yml  release.yml
helm/: Chart.yaml  values.yaml
helm-chart/: Chart.yaml  values.yaml
helm-chart/templates/: _helpers.tpl  deployment.yaml  middleware.yaml  service.yaml
helm-chart/templates/tests/: test-connection.yaml
helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  middleware.yaml  service.yaml  serviceaccount.yaml
src/: main.rs  session_store.rs
src/_bin/: gitlab.rs
src/oidc_providers/: mod.rs
src/oidc_providers/k8s_ingress_providers/: mod.rs
src/salvo_utils/: mod.rs
