[[bin]]
name = "oidc-forward-auth-middleware"
path = "src/main.rs"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[package]
name = "oidc-forward-auth-middleware"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
openidconnect = { version = "3", features = [
    "reqwest",
    "rustls-tls",
], default-features = false }
salvo = { version = "0.64", features = [
    "cookie",
    "server",
    "quinn",
    "logging",
], default-features = false }
tokio = { version = "1", features = ["macros"], default-features = false }
jsonwebtoken = { version = "9", default-features = false }
serde_json = "1"
reqwest = { version = "0", features = [
    "json",
    "blocking",
    "rustls-tls",
], default-features = false }
serde = "1"
openssl = { version = "0", features = ["vendored"], default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
