[[bin]]
name = "oidc-forward-auth-middleware"
path = "src/main.rs"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[package]
name = "oidc-forward-auth-middleware"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
urlencoding = "*"
openidconnect = { version = "3", features = [
    "reqwest",
    "rustls-tls",
], default-features = false }
salvo = { version = "0.80.0", features = [
    "cookie",
    "server",
    "quinn",
    "logging",
] }
tokio = { version = "1", features = ["macros"], default-features = false }
jsonwebtoken = { version = "9", default-features = false }
reqwest = { version = "0", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = "1"
openssl = { version = "0", features = ["vendored"], default-features = false }
tracing = "0"
tracing-subscriber = "0.3"
kube = { version = "0.93", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22", features = ["latest"] }
