[[bin]]
name = "oidc-forward-auth-middleware"
path = "src/main.rs"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[package]
name = "oidc-forward-auth-middleware"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
urlencoding = "*"
base64 = "0"
serde_json = "1"
openidconnect = { version = "4", features = [
    "reqwest",
    "rustls-tls",
], default-features = false }
salvo = { version = "0", features = [
    "cookie",
    "server",
    "quinn",
    "logging",
    "rustls",
] }
tokio = { version = "1", features = ["macros"], default-features = false }
jsonwebtoken = { version = "10", features = ["rust_crypto"], default-features = false }
reqwest = { version = "0", features = [
    "json",
    "rustls-tls",
], default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = "1"
openssl = { version = "0", features = ["vendored"], default-features = false }
tracing = "0"
tracing-subscriber = "0.3"
kube = { version = "3", features = ["runtime", "derive"] }
k8s-openapi = { version = "0", features = ["latest"] }
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1", features = ["v4"] }
